# WorldBorder

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.txt
WorldBorder/: CMakeLists.txt  global.h  main.cpp
